--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>Selenium</groupId>
-  <artifactId>Selenium</artifactId>
+  <groupId>com.selenium.test</groupId>
+  <artifactId>com.selenium.test</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>  
 	<dependencies>
@@ -12,7 +12,6 @@
 		</dependency>
     </dependencies>
   <build>
-    <sourceDirectory>src</sourceDirectory>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
