--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,11 @@
 			<artifactId>selenium-java</artifactId>
 			<version>3.14.0</version>
 		</dependency>
+		 <dependency>              
+            <groupId>org.testng</groupId>                               
+            <artifactId>testng</artifactId>                             
+            <version>6.8</version>                                                                   
+       </dependency>  
     </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
@@ -24,11 +29,28 @@
           <manifest>
             <addClasspath>true</addClasspath>
             <classpathPrefix>lib/</classpathPrefix>
-            <mainClass>com.selenium.test.Demo</mainClass>
+            <mainClass>com.selenium.test.Demo.java</mainClass>
           </manifest>
         </archive>
       </configuration>
       </plugin>
+       <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.5</version>
+        <configuration>
+          <source/>
+          <target/>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.19.1</version>
+                <inherited>true</inherited>
+            <configuration>
+                <suiteXmlFile>testng.xml</suiteXmlFile>
+            </configuration>
+    </plugin>
     </plugins>
   </build>
 </project>
